# ai-genai-llm-guardrails

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
config/: application-dev.yaml  application-prod.yaml  application.yaml  guardrails.yaml
src/guardrails/: __init__.py  main.py
src/guardrails/api/: __init__.py
src/guardrails/api/middleware/: __init__.py  error_handler.py
src/guardrails/api/routes/: __init__.py  guardrail_routes.py  health_routes.py
src/guardrails/config/: __init__.py  logging_config.py  settings.py
src/guardrails/core/: __init__.py  engine.py  interfaces.py  pipeline.py
src/guardrails/guards/: __init__.py
src/guardrails/guards/input/: __init__.py  pii_detector.py  prompt_injection.py  topic_restriction.py  toxic_content.py
src/guardrails/guards/output/: __init__.py  content_filter.py  hallucination.py  output_validator.py  pii_redactor.py
src/guardrails/llm/: __init__.py  anthropic_provider.py  base_provider.py  mock_provider.py  openai_provider.py  provider_factory.py
src/guardrails/models/: __init__.py  guard_result.py  requests.py  responses.py
src/guardrails/utils/: __init__.py  pii_vault.py  regex_patterns.py  text_processor.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_engine.py  test_llm_providers.py  test_pii_vault.py  test_pipeline.py
tests/unit/guards/: __init__.py
tests/unit/guards/input/: __init__.py  test_pii_detector.py  test_prompt_injection.py  test_topic_restriction.py  test_toxic_content.py
tests/unit/guards/output/: __init__.py  (+4 more)
